--- a/ifdh/Makefile
+++ b/ifdh/Makefile
@@ -53,7 +53,7 @@ ifdh_wrap.cxx: ifdh.h
 
 ifdh_wrap.cxx: ifdh.i 
 	test -d python || mkdir python
-	swig -python -c++ -o ifdh_wrap.cxx $< || cp ifdh_wrap.cxx.fallback ifdh_wrap.cxx
+	swig -python -c++ -o ifdh_wrap.cxx $< || (cp ifdh_wrap.cxx.fallback ifdh_wrap.cxx && cp ifdh.py.fallback ifdh.py)
 	set -x ; python -V 2>&1 | grep ' 2.[67]' > /dev/null && rpm -qf /usr/bin/swig | grep 1.3.[42][90] && (patch -p0 < ifdh_wrap.patch ||  patch -p0 < ../../ifdh/ifdh_wrap.patch) || true
 	mv ifdh.py python/ifdh.py
 
