make sure all checked in

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -6,7 +6,7 @@ protocols=file: gsiftp: srm:  i: s3: D0:
 prefixes=/pnfs/dzero /pnfs/cdfen /pnfs /$EXPERIMENT/ /grid/(app|data|fermiapp) /
 
 # locations we know special things about, examined in order
-locations=gsiftp://if-gridftp-$EXPEIMENT: gsiftp://fg-bestman1.fnal.gov: srm://fg-bestman1.fnal.gov: gsiftp://fndca1.fnal.gov gsiftp://cdfdca1.fnal.gov: gsiftp://d0dca1.fnal.gov: file:///grid/ file:///$EXPERIMENT/
+locations=gsiftp://if-gridftp-$EXPERIMENT: gsiftp://fg-bestman1.fnal.gov: srm://fg-bestman1.fnal.gov: gsiftp://fndca1.fnal.gov gsiftp://cdfdca1.fnal.gov: gsiftp://d0dca1.fnal.gov: file:///grid/ file:///$EXPERIMENT/
 
 [prefix /]
 protocols=file:
