OSX ignores _ifdh if using wildcard

--- a/ifdh/Makefile
+++ b/ifdh/Makefile
@@ -26,7 +26,8 @@ install:
 	cp ifdh   ../bin
 	cp $(LIB) ../lib
 	cp $(HDR) ../include
-	cp python/* ../lib/python
+	cp python/_ifdh.$(SHLIB) ../lib/python
+	cp python/ifdh.py ../lib/python
 	cp www_cp.sh ../bin
 
 clean: 
@@ -45,7 +46,7 @@ ifdh: libifdh.$(SHLIB) ifdh_main.o
 
 python/_ifdh.$(SHLIB): $(PYMOD_OBJS)
 	test -d python || mkdir python 
-	g++ --shared $(ARCH) -o  $@ $(PYMOD_OBJS) $${PYTHON_LIB:-$${PYTHON_DIR:-/usr}/lib64}/python*/config/libpython*.[asd]* $(LDLIBS) || g++ --shared $(ARCH) -o  $@ $(PYMOD_OBJS) $${PYTHON_LIB:-$${PYTHON_DIR:-/usr}/lib}/python*/config/libpython*.[asd]* $(LDLIBS)
+	g++ --shared $(ARCH) -o  $@ $(PYMOD_OBJS) $${PYTHON_LIB:-$${PYTHON_DIR:-/usr}/lib64}/python*/config/libpython*[asd]* $(LDLIBS) || g++ --shared $(ARCH) -o  $@ $(PYMOD_OBJS) $${PYTHON_LIB:-$${PYTHON_DIR:-/usr}/lib}/python*/config/libpython*[asd]* $(LDLIBS)
 
 
 libifdh.$(SHLIB): $(ALL_OBJS)
