--- a/ifdh/Makefile
+++ b/ifdh/Makefile
@@ -9,7 +9,7 @@ SHLIB=so
 endif
 LIB=libifdh.$(SHLIB)
 HDR=ifdh.h
-SWIGCXXFLAGS=-fPIC -I../util -I../numsg -I../../util -I../../numsg -I../../ifdh -g -I${PYTHON_INCLUDE} $(ARCH)
+SWIGCXXFLAGS=-fPIC -I../util -I../numsg -I../../util -I../../numsg -I../../ifdh -g -I$${PYTHON_INCLUDE:-`echo /usr/include/python*`} $(ARCH)
 CXXFLAGS=-pedantic-errors -Wall -Wextra -Werror -fPIC -I../../util -I../util -I ../../numsg -I../numsg -g  $(ARCH) -I$(SRCDIR)
 OBJ=ifdh.o ifdh_cp.o
 ALL_OBJS=$(OBJ) ../util/WebAPI.o ../numsg/numsg.o ../util/SyslogAPI.o ../util/utils.o ../util/regwrap.o ../util/Checksum.o
@@ -46,7 +46,7 @@ ifdh: libifdh.$(SHLIB) ifdh_main.o
 
 python/_ifdh.$(SHLIB): $(PYMOD_OBJS)
 	test -d python || mkdir python 
-	g++ --shared $(ARCH) -o  $@ $(PYMOD_OBJS) ${PYTHON_LIB}/libpython*[asd]* $(LDLIBS) || g++ --shared $(ARCH) -o  $@ $(PYMOD_OBJS) ${PYTHON_LIB}/libpython*[asd]* $(LDLIBS)
+	g++ --shared $(ARCH) -o  $@ $(PYMOD_OBJS) $${PYTHON_LIB:-/usr/lib64}/libpython*[asd]* $(LDLIBS) || g++ --shared $(ARCH) -o  $@ $(PYMOD_OBJS) $${PYTHON_LIB:-/usr/lib}/libpython*[asd]* $(LDLIBS)
 
 
 libifdh.$(SHLIB): $(ALL_OBJS)
