--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -1,191 +1,372 @@
 
+[macros]
+EXPERIMENT=(annie|argoneut|auger|btev|captmnv|cdms|cepa|chips|ckm|coupp|cpad|darkside|des|ds50|e990|dune|gm2|GM2|genie|lar1nd|lariat|lartpc|lbne|lbnewc|minerva|miniboone|mu2e|nova|numix|nusoft|patriot|sbnd|sciboone|seaquest|Simons|uboone)
+
 [general]
-protocols=file: gsiftp: srm:  i: s3: D0:
+conditionals=gfal macos
+protocols=file: https: ucondb: gsiftp: srm:  i: s3: gs: D0: root:
+prefixes=D0: /pnfs/dzero /pnfs/cdfen /pnfs /%(EXPERIMENT)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ s3:// gs:// gsiftp:// srm:// xroot:// root:// /
 
-# prefixes we mess with
-prefixes=/pnfs/dzero /pnfs/cdfen /pnfs /$EXPERIMENT/ /grid/(app|data|fermiapp) /
 
-# locations we know special things about, examined in order
-locations=gsiftp://if-gridftp-$EXPERIMENT: gsiftp://fg-bestman1.fnal.gov: srm://fg-bestman1.fnal.gov: gsiftp://fndca1.fnal.gov gsiftp://cdfdca1.fnal.gov: gsiftp://d0dca1.fnal.gov: file:///grid/ file:///$EXPERIMENT/
+[conditional gfal]
+test=-x /usr/bin/gfal-copy
+rename_proto=srm-gfal: srm:
+
+[conditional macos]
+test=-x /usr/bin/dyld
+rename_proto=gsiftp-apple: gsiftp:
+
+[prefix /%(EXPERIMENT)s/]
+location=bluearc
+slashstrip=0
+
+[prefix /grid/(app|data|fermiapp)/%(EXPERIMENT)s/]
+location=bluearc
+slashstrip=0
 
 [prefix /]
+location=local_fs
+slashstrip=0
+
+[prefix D0:]
+location=generic_d0_scp
+slashstrip=0
+
+[prefix file:///]
+location=local_fs
+slashstrip=2
+
+[prefix /pnfs/cdfen/]
+location=dcache_cdfen
+slashstrip=1
+
+[prefix srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/]
+location=dcache_cdfen
+slashstrip=8
+
+[prefix gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/]
+location=dcache_cdfen
+slashstrip=6
+
+[prefix /pnfs/dzero/]
+location= dcache_dzero
+slashstrip=2
+
+[prefix srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/]
+location=dcache_d0en
+slashstrip=8
+
+[prefix gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/]
+location=dcache_cdfen
+slashstrip=6
+
+[prefix /pnfs/fnal.gov/usr/%(EXPERIMENT)s/]
+location= dcache_stken
+slashstrip=4
+
+[prefix https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/]
+location= dcache_stken
+slashstrip=6
+
+[prefix https://fndca4a.fnal.gov:2880/pnfs/]
+location= dcache_stken
+slashstrip=4
+
+[prefix root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr]
+location= dcache_stken
+slashstrip=6
+
+[prefix /pnfs]
+location= dcache_stken
+slashstrip=2
+
+[prefix s3://]
+location=amazon_s3
+slashstrip=0
+
+[prefix gs://]
+location=google_storage
+slashstrip=0
+
+[prefix root://]
+location=generic_root
+slashstrip=0
+
+[prefix xroot://]
+location=generic_root
+slashstrip=0
+
+[prefix gsiftp://]
+location=generic_gridftp
+slashstrip=0
+
+[prefix srm://]
+location=generic_se
+slashstrip=0
+
+[location local_fs]
+need_cpn_lock=0
 protocols=file:
 
-[prefix / file:]
-need_cpn_lock=0
-src_rewrite=/
-src_repl=file:///
-
-[prefix /pnfs/cdfen]
-need_cpn_lock=0
+[location bluearc]
+need_cpn_lock=1
 protocols=file: gsiftp: srm:
+prefix_file=
+prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811
+prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=
 
-[prefix /pnfs/dzero]
+[location dcache_cdfen]
 need_cpn_lock=0
-protocols=file: gsiftp: srm:
+#lookup_door_uri=http://cdfdca.fnal.gov:2288/info/doors
+protocols=gsiftp: srm: root:
+prefix_file=/pnfs/cdfen/
+prefix_gsiftp=gsiftp://cdfdca1.fnal.gov/pnfs/fnal.gov/usr/cdfen/
+prefix_srm=srm://cdfdca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/
+prefix_root=root://cdfdca1.fnal.gov:1094/pnfs/fnal.gov/usr/cdfen/
 
-[prefix /pnfs/]
-protocols=file: gsiftp: srm:
+[location dcache_dzero]
+need_cpn_lock=0
+#lookup_door_uri=http://d0dca.fnal.gov:2288/info/doors
+protocols=gsiftp: srm: root:
+prefix_file=/pnfs/dzero
+prefix_gsiftp=gsiftp://d0dca1.fnal.gov/pnfs/fnal.gov/usr/dzero
+prefix_srm=srm://d0dca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/dzero
+prefix_root=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
 
-[prefix /pnfs/cdfen file:]
-src_rewrite=/pnfs/cdfen
-src_repl=file:///pnfs/cdfen
-dst_rewrite=/pnfs/cdfen
-dst_repl=file:///pnfs/cdfen
-
-[prefix /pnfs/cdfen gsiftp:]
-lookup_door_uri=http://cdfdca.fnal.gov:2288/info/doors
-dst_rewrite=/pnfs/cdfen
-dst_repl=gsiftp://cdfdca1.fnal.gov/pnfs/fnal.gov/usr/cdfen
-src_rewrite=/pnfs/cdfen
-src_repl=gsiftp://cdfdca1.fnal.gov/pnfs/fnal.gov/usr/cdfen
-
-[prefix /pnfs/cdfen srm:]
-dst_rewrite=/pnfs/cdfen
-dst_repl=srm://cdfdca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen
-src_rewrite=/pnfs/cdfen
-src_repl=srm://cdfdca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen
-
-
-[prefix /pnfs/dzero file:]
-src_rewrite=/pnfs/dzero
-src_repl=file:///pnfs/dzero
-dst_rewrite=/pnfs/dzero
-dst_repl=file:///pnfs/dzero
-
-[prefix /pnfs/dzero gsiftp:]
-lookup_door_uri=http://d0dca.fnal.gov:2288/info/doors
-dst_rewrite=/pnfs/dzero
-dst_repl=gsiftp://d0dca1.fnal.gov/pnfs/fnal.gov/usr/dzero
-src_rewrite=/pnfs/dzero
-src_repl=gsiftp://d0dca1.fnal.gov/pnfs/fnal.gov/usr/dzero
-
-[prefix /pnfs/dzero srm:]
-dst_rewrite=/pnfs/dzero
-dst_repl=srm://d0dca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/dzero
-dst_rewrite=/pnfs/dzero
-dst_repl=srm://d0dca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/dzero
-
-[prefix /pnfs/ file:]
-dst_rewrite=/pnfs/
-dst_repl=file:///pnfs/
-src_rewrite=/pnfs/
-src_repl=file:///pnfs/
-
-[prefix /pnfs/ gsiftp:]
+[location dcache_stken]
+need_cpn_lock=0
 lookup_door_uri=http://fndca.fnal.gov:2288/info/doors
-dst_rewrite=/pnfs/(fnal.gov/)?(usr/)?
-dst_repl=gsiftp://$DOOR/pnfs/fnal.gov/usr/
-dst_rewrite=/pnfs/(fnal.gov/)?(usr/)?
-src_repl=gsiftp://$DOOR/pnfs/fnal.gov/usr/
+door_repl_re=://(stkendca|fndca)[^/]*.fnal.gov
+protocols=gsiftp: srm: root: https:
+prefix_file=/pnfs/
+prefix_gsiftp=gsiftp://fndca1.fnal.gov/pnfs/fnal.gov/usr/
+prefix_srm=srm://fndca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/
+prefix_root=root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/
+prefix_https=https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/
 
-[prefix /pnfs/ srm:]
-dst_repl=srm://fndca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/
-dst_repl=srm://fndca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/
+[location amazon_s3]
+need_cpn_lock=0
+protocols=s3:
+prefix_s3=
 
-[prefix /grid/]
-protocols=srm: gsiftp:
+[location google_storage]
+need_cpn_lock=0
+protocols=gs:
+prefix_gs=
 
-[prefix /grid/ srm:]
-src_repl=srm://fg-bestman1.fnal.gov:10443/srm:/v2/server?SFN=/grid/
-dst_repl=srm://fg-bestman1.fnal.gov:10443/srm:/v2/server?SFN=/grid/
+[location generic_irods]
+need_cpn_lock=0
+protocols=i:
+prefix_i=
 
-[prefix /grid/ gsiftp:]
-src_repl=gsiftp://fg-bestman1.fnal.gov:2811/grid/
-dst_repl=gsiftp://if-gridftp-$EXPERIMENT.fnal.gov:2811/grid/
+[location generic_d0_scp]
+need_cpn_lock=0
+protocols=D0:
+prefix_i=
 
-[prefix /$EXPERIMENT/]
-protocols=gsiftp: srm:
+[location generic_root]
+need_cpn_lock=0
+protocols=root:
+prefix_root=
 
-[prefix /$EXPERIMENT/ srm:]
-src_repl=srm://fg-bestman1.fnal.gov:10443/srm:/v2/server?SFN=/$EXPERIMENT/
-dst_repl=srm://fg-bestman1.fnal.gov:10443/srm:/v2/server?SFN=/$EXPERIMENT/
+[location generic_se]
+need_cpn_lock=0
+protocols=srm:
+prefix_srm=
 
-[prefix /$EXPERIMENT/ gsiftp:]
-src_repl=gsiftp://fg-bestman1.fnal.gov:2811/$EXPERIMENT/
-dst_repl=gsiftp://if-gridftp-$EXPERIMENT.fnal.gov:2811/$EXPERIMENT/
-
-[prefix /$EXPERIMENT/ srm:]
-src_repl=srm://fg-bestman1.fnal.gov:10443/srm:/v2/server?SFN=/$EXPERIMENT/
-dst_repl=srm://fg-bestman1.fnal.gov:10443/srm:/v2/server?SFN=/$EXPERIMENT/
-
-[prefix /$EXPERIMENT/ gsiftp:]
-src_repl=gsiftp://fg-bestman1.fnal.gov:2811/$EXPERIMENT/
-dst_repl=gsiftp://if-gridftp-$EXPERIMENT.fnal.gov:2811/$EXPERIMENT/
-
-[location file:///]
-need_cpn=0
-
-[location file:///grid/]
-need_cpn=1
-CPN_LOCK_DIR=/grid/data/$EXPERIMENT/LOCK
-
-[location file:///$EXPERIMENT/]
-need_cpn=1
-CPN_LOCK_DIR=/grid/data/$EXPERIMENT/LOCK
-
-[location gsiftp://if-gridftp-$EXPERIMENT:]
-need_cpn=1
-CPN_LOCK_DIR=/grid/data/$EXPERIMENT/LOCK
-
-[location gsiftp://fg-bestman1.fnal.gov:]
-need_cpn=1
-CPN_LOCK_DIR=/grid/data/$EXPERIMENT/LOCK
-
-[location srm://fg-bestman1.fnal.gov:]
-need_cpn=1
-CPN_LOCK_DIR=/grid/data/$EXPERIMENT/LOCK
-
-[location gsiftp://fndca1.fnal.gov:]
-need_cpn=0
-CPN_LOCK_DIR=/grid/data/$EXPERIMENT/LOCK
-
-[location gsiftp://cdfdca1.fnal.gov:]
-need_cpn=0
-CPN_LOCK_DIR=/grid/data/$EXPERIMENT/LOCK
-
-[location gsiftp://d0dca1.fnal.gov:]
-need_cpn=0
-CPN_LOCK_DIR=/grid/data/$EXPERIMENT/LOCK
-
-[location D0:]
-need_cpn=1
-CPN_LOCKD_DIR=/grid/data/$EXPERIMENT/$host/$LOCK
+[location generic_gridftp]
+need_cpn_lock=0
+protocols=gsiftp:
+prefix_gsiftp=
 
 [protocol file:]
-builtin=file:
-command_cp=dd if=$src_path of=$dst_path bs=64k
-command_lss=ls -s $dst_path
-command_ll=ls -l $dst_path
-command_chmod=chmod $mode $dst_path
+strip_file_prefix=1
+need_proxy=0
+cp_cmd=dd bs=512k %(extra)s if=%(src)s of=%(dst)s
+cp_r_cmd=cp -r %(extra)s %(src)s %(dst)s
+lss_size_last=0
+lss_dir_last=1
+lss_skip=0
+lss_cmd=find %(src)s -maxdepth 1 \( -type d -printf '%s %p/\n' -o -printf '%s %p\n' \) 
+ll_cmd=find %(src)s -maxdepth 1 -ls
+lss_re1 = \s*([0-9]+)\s(/.*/)(.*)(/)$
+lss_re2 = \s*([0-9]+)\s(/.*/)(.*)()$
+mv_cmd=mv %(src)s %(dst)s
+chmod_cmd=chmod %(mode)s %(src)s
+mkdir_cmd=mkdir %(src)s
+rm_cmd=rm %(src)s
+rmdir_cmd=rmdir %(src)s
 
-[protocol srm:]
-builtin=srm: file:
-command_cp=lcg-cp  --sendreceive-timeout 4000 -b -D srmv2 $src $dst
-command_lss=srmls -2 -count=8192 $dst
-command_ll=srmls -2 -count=8192 $dst
-command_chmod=
+[protocol i:]
+need_proxy=1
+strip_file_prefix=1
+cp_cmd=icp %(extra)s %(src)s %(dst)s
+lss_cmd=ils  %(src)s
+lss_skip=0
+lss_size_last=0
+ll_cmd=ils -l %(recusion_flag)s %(src)s
+mv_cmd=imv %(src)s %(dst)s
+chmod_cmd=ichmod %(mode)s %(src)s
+mkdir_cmd=
+rm_cmd=
+rmdir_cmd=
+pin_cmd=
+
+[protocol gsiftp-apple:]
+need_proxy=1
+strip_file_prefix=0
+cp_cmd=globus-url-copy -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 %(extra)s %(src)s %(dst)s
+cp_r_cmd=globus-url-copy -cd -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 -r %(extra)s %(src)s/ %(dst)s/
+lss_cmd=globus-url-copy -list %(src)s
+lss_skip=1
+lss_size_last=0
+lss_dir_last=1
+lss_re1= \s*()()([^/]*)(/)$
+lss_re2= \s*()()([^/]*)()$
+ll_cmd=globus-url-copy -list %(src)s
+mv_cmd=false
+chmod_cmd=false
+mkdir_cmd=false
+rm_cmd=false
+rmdir_cmd=false
+pin_cmd=false
 
 [protocol gsiftp:]
-builtin=srm: file:
-command_cp=lcg-cp  --sendreceive-timeout 4000 -b -D srmv2 $src $dst
-command_lss=globus-url-copy -list $dst
-command_lss=uberftp -ls $dst
-command_ll=uberftp -ll $dst
-command_chmod=uberftp chmod $mode $dst
+need_proxy=1
+strip_file_prefix=0
+cp_cmd=globus-url-copy -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 %(extra)s %(src)s %(dst)s
+cp_r_cmd=globus-url-copy -cd -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 -r %(extra)s %(src)s/ %(dst)s/
+lss_cmd=uberftp -ls %(src)s
+lss_skip=0
+lss_size_last=0
+lss_dir_last=0
+lss_re1 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s*(_*)([^/]*)$
+lss_re2 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s*[A-Z].{11}\s*(/.*/)([^/]*)$
+ll_cmd=uberftp -ls %(src)s
+mv_cmd=uberftp -rename  %(src)s %(dst)s
+chmod_cmd=uberftp -chmod %(mode)s  %(src)s
+mkdir_cmd=uberftp -mkdir  %(src)s
+rm_cmd=uberftp -rm  %(src)s
+rmdir_cmd=uberftp -rm  %(src)s
+
+[protocol srm:]
+need_proxy=1
+strip_file_prefix=0
+cp_cmd=lcg-cp  --sendreceive-timeout 14400 -b -D srmv2 %(extra)s %(src)s %(dst)s
+lss_cmd=srmls -2 -count=8192 %(src)s 
+lss_skip=0
+lss_size_last=0
+lss_dir_last=1
+lss_re1 = \s*([0-9]+)\s(/.*/)(.*)(/?)$
+ll_cmd=srmls -2 -count=8192 --long %(src)s 
+mv_cmd=srmmv -2 %(src)s %(dst)s
+chmod_cmd=srm-set-permissions --owner=%(obits)s --group=%(gbits)s --other=%(obits)s %(src)s
+mkdir_cmd=srmmkdir %(src)s
+rm_cmd=srmrm %(src)s
+rmdir_cmd=srmrmdir %(src)s
+pin_cmd=srm-bring-online --liftime=%(secs)s %(src)s
+
+[protocol srm-gfal:]
+need_proxy=1
+strip_file_prefix=0
+cp_cmd=gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s
+lss_cmd=gfal-ls -l %(src)s
+lss_skip=0
+lss_size_last=0
+lss_dir_last=0
+lss_re1 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/]*)$
+ll_cmd=gfal-ls -l %(src)s
+mv_cmd=gfal-rename %(src)s %(dst)s
+chmod_cmd=gfal-chmod %(mode)s %(src)s
+mkdir_cmd=gfal-mkdir %(src)s
+rm_cmd=gfal-rm %(src)s
+rmdir_cmd=gfal-rm %(src)s
+pin_cmd=srm-bring-online --liftime=%(secs)s %(src)s
+
+[protocol root:]
+need_proxy=1
+strip_file_prefix=0
+#cp_cmd=xrdcp –DIRedirectLimit 255 -DIRequestTimeout 14400 --tpc first --force %(extra)s %(src)s %(dst)s
+cp_cmd=xrdcp -DIRequestTimeout 14400 --tpc first --force  %(extra)s %(src)s %(dst)s
+lss_cmd=xrdwrap.sh ls -l %(src)s
+lss_skip=0
+lss_size_last=0
+lss_dir_last=0
+lss_re1 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/]*)$
+ll_cmd=xrdwrap.sh ls -l %(src)s
+mv_cmd=xrdwrap.sh mv %(src)s %(dst)s
+chmod_cmd=xrdwrap.sh chmod %(mode)s %(src)s
+mkdir_cmd=xrdwrap.sh mkdir %(src)s
+rm_cmd=xrdwrap.sh rm %(src)s
+rmdir_cmd=xrdwrap.sh rmdir %(src)s
+
+[protocol gs:]
+need_google_token=1
+strip_file_prefix=1
+cp_cmd=gsutil cp  %(extra)s %(src)s %(dst)s
+cp_r_cmd=gsutil cp -r %(extra)s %(src)s %(dst)s
+lss_cmd=gsutil ls %(src)s
+lss_skip=0
+lss_size_last=0
+lss_dir_last=1
+#   2276224  2012-03-02T19:25:17Z  gs://bucket/obj1
+#   3914624  2012-03-02T19:30:27Z  gs://bucket/obj2
+lss_re1 = \s*([0-9]*)\s+[0-9][-0-9]{9}T[:0-9]{8}Z\s()([^/]*)(/?)$
+lss_re2 = \s*([0-9]*)\s+[0-9][-0-9]{9}T[:0-9]{8}Z\s*(.*/)([^/]*)(/?)$
+ll_cmd=gsutil ls -l %(src)s
+mv_cmd=gsutil mv %(src)s %(dst)s
+chmod_cmd=gsutil chmod %(mode)s %(src)s
+mkdir_cmd=gsutil mkbucket %(src)s
+rm_cmd=gsutil rm %(src)s
+rmdir_cmd=gsutil rm %(src)s
+pin_cmd=false
 
 [protocol s3:]
-builtin=s3: file:
-command_cp=aws s3 cp $src $dst
-copy_recursive=--recursive
-command_lss=aws s3 ls $dst
-command_ll=aws s3 ls -l $dst
-command_chmod=
+need_aws_token=1
+strip_file_prefix=1
+redir_pipe=1
+cp_cmd=aws s3 cp  %(extra)s %(src)s %(dst)s
+cp_r_cmd=aws s3 cp --recursive %(extra)s %(src)s %(dst)s
+lss_cmd=aws s3 ls %(src)s
+lss_skip=0
+lss_size_last=0
+lss_dir_last=1
+# 2015-08-04 15:02:33        479 file.gz
+# 2015-08-04 15:02:33        479 d1/d2/d3/file.gz
+lss_re1 = [0-9][-0-9]{9}\s[:0-9]{8}\s*([0-9]*)\s*()([^/]*)(/?)$
+lss_re2 = [0-9][-0-9]{9}\s[:0-9]{8}\s*([0-9]*)\s*(.*/)([^/]*)(/?)$
+ll_cmd=
+mv_cmd=aws s3 mv %(src)s %(dst)s
+chmod_cmd=aws s3 chmod %(mode)s %(src)s
+mkdir_cmd=aws s3 mkbucket %(src)s
+rm_cmd=aws s3 rm %(src)s
+rmdir_cmd=aws s3 rm %(src)s
+pin_cmd=false
+
+[protocol https:]
+strip_file_prefix=1
+need_proxy=1
+cp_cmd=www_cp.sh %(extra)s %(src)s %(dst)s
+lss_cmd=www_cp.sh --ls %(src)s
+lss_skip=0
+lss_size_last=1
+lss_dir_last=1
+lss_re1 = (/.*/)([^/]*)\s([0-9]+)\s*$
+mv_cmd=www_cp.sh --mv %(src)s %(dst)s
 
 [protocol D0:]
-builtin=D0: file:
-command_cp=scp $src $dst
-copy_recursive=-r
-command_lss=ssh $dst_host ls -s $dst_path
-command_ll=ssh $dst_host ls -l $dst_path
-command_chmod=ssh $dst_host chmod $mode $dst_path
+strip_file_prefix=1
+cp_cmd=src="%(src)s"; dst="%(dst)s"; scp %(extra)s ${src\#D0:} ${dst\#D0:}
+lss_size_last=0
+lss_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "find ${srcp} -maxdepth 1 \( -type d -printf '%s %p/\n' -o -printf '%s %p\n' \)"
+lss_re1 = \s*([0-9]+)\s(/.*/)(.*)(/)$
+lss_re2 = \s*([0-9]+)\s(/.*/)(.*)()$
+lss_skip=0
+lss_size_last=0
+lss_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "find ${srcp} -maxdepth 1 \( -type d -printf '%s %p/\n' -o -printf '%s %p\n' \)"
+ll_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "ls -l ${srcp}"
+mv_cmd=src="%(src)s"; dst="%(dst)s"; dstp=${dst\#D0:*:} src=${src\#D0:}; srch=${src%:/*} srcp=${src/*:/}; ssh ${srch} "mv ${srcp} ${dstp}"
+chmod_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "chmod %(mode)s ${srcp}"
+mkdir_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "mkdir ${srcp}"
+rm_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "rm ${srcp}"
+rmdir_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "rmdir ${srcp}"
