--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -113,6 +113,9 @@ need_cpn_lock=1
 protocols=file: gsiftp: srm:
 prefix_file=
 prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811
+need_cpn_lock=0
+protocols=i:
+prefix_i=
 prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=
 
 [location dcache_cdfen]
@@ -155,9 +158,6 @@ protocols=gs:
 prefix_gs=
 
 [location generic_irods]
-need_cpn_lock=0
-protocols=i:
-prefix_i=
 
 [location generic_d0_scp]
 need_cpn_lock=0
@@ -243,11 +243,11 @@ lss_dir_last=0
 lss_re1 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s*(_*)([^/]*)$
 lss_re2 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s*[A-Z].{11}\s*(/.*/)([^/]*)$
 ll_cmd=uberftp -ls %(src)s
-mv_cmd=uberftp -rename  %(src)s %(dst)s
+mv_cmd=dst="%(dst)s";  uberftp -rename %(src)s /${dst\#*://*/}
 chmod_cmd=uberftp -chmod %(mode)s  %(src)s
 mkdir_cmd=uberftp -mkdir  %(src)s
 rm_cmd=uberftp -rm  %(src)s
-rmdir_cmd=uberftp -rm  %(src)s
+rmdir_cmd=uberftp -rmdir  %(src)s
 
 [protocol srm:]
 need_proxy=1
@@ -257,14 +257,14 @@ lss_cmd=srmls -2 -count=8192 %(src)s
 lss_skip=0
 lss_size_last=0
 lss_dir_last=1
-lss_re1 = \s*([0-9]+)\s(/.*/)(.*)(/?)$
+lss_re1 = \s*([0-9]+)\s(/.*/)([^ /]*)(/?) *$
 ll_cmd=srmls -2 -count=8192 --long %(src)s 
 mv_cmd=srmmv -2 %(src)s %(dst)s
 chmod_cmd=srm-set-permissions --owner=%(obits)s --group=%(gbits)s --other=%(obits)s %(src)s
 mkdir_cmd=srmmkdir %(src)s
 rm_cmd=srmrm %(src)s
 rmdir_cmd=srmrmdir %(src)s
-pin_cmd=srm-bring-online --liftime=%(secs)s %(src)s
+pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
 
 [protocol srm-gfal:]
 need_proxy=1
@@ -274,14 +274,14 @@ lss_cmd=gfal-ls -l %(src)s
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
-lss_re1 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/]*)$
+lss_re1 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/ 	]*)[ 	]*$
 ll_cmd=gfal-ls -l %(src)s
 mv_cmd=gfal-rename %(src)s %(dst)s
 chmod_cmd=gfal-chmod %(mode)s %(src)s
 mkdir_cmd=gfal-mkdir %(src)s
 rm_cmd=gfal-rm %(src)s
 rmdir_cmd=gfal-rm %(src)s
-pin_cmd=srm-bring-online --liftime=%(secs)s %(src)s
+pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
 
 [protocol root:]
 need_proxy=1
