all checked in?

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -182,6 +182,8 @@ prefix_gsiftp=
 [protocol file:]
 strip_file_prefix=1
 need_proxy=0
+extra_env=IFDH_DD_EXTRA
+extra_env_2=IFDH_CP_EXTRA
 cp_cmd=dd bs=512k %(extra)s if=%(src)s of=%(dst)s
 cp_r_cmd=cp -r %(extra)s %(src)s %(dst)s
 lss_size_last=0
@@ -200,6 +202,7 @@ rmdir_cmd=rmdir %(src)s
 [protocol i:]
 need_proxy=1
 strip_file_prefix=1
+extra_env=IFDH_IROOTD_EXTRA
 cp_cmd=icp %(extra)s %(src)s %(dst)s
 lss_cmd=ils  %(src)s
 lss_skip=0
@@ -215,6 +218,8 @@ pin_cmd=
 [protocol gsiftp-apple:]
 need_proxy=1
 strip_file_prefix=0
+extra_env=IFDH_GRIDFTP_EXTRA
+extra_env2=IFDH_GSIFTP_EXTRA
 cp_cmd=globus-url-copy -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 %(extra)s %(src)s %(dst)s
 cp_r_cmd=globus-url-copy -cd -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 -r %(extra)s %(src)s/ %(dst)s/
 lss_cmd=globus-url-copy -list %(src)s
@@ -233,6 +238,8 @@ pin_cmd=false
 
 [protocol gsiftp:]
 need_proxy=1
+extra_env=IFDH_GRIDFTP_EXTRA
+extra_env2=IFDH_GSIFTP_EXTRA
 strip_file_prefix=0
 cp_cmd=globus-url-copy -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 %(extra)s %(src)s %(dst)s
 cp_r_cmd=globus-url-copy -cd -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 -r %(extra)s %(src)s/ %(dst)s/
@@ -252,6 +259,7 @@ rmdir_cmd=uberftp -rmdir  %(src)s
 [protocol srm:]
 need_proxy=1
 strip_file_prefix=0
+extra_env=IFDH_SRM_EXTRA
 cp_cmd=lcg-cp  --sendreceive-timeout 14400 -b -D srmv2 %(extra)s %(src)s %(dst)s
 lss_cmd=srmls -2 -count=8192 %(src)s 
 lss_skip=0
@@ -269,6 +277,7 @@ pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
 [protocol srm-gfal:]
 need_proxy=1
 strip_file_prefix=0
+extra_env=IFDH_SRM_EXTRA
 cp_cmd=gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s
 lss_cmd=gfal-ls -l %(src)s
 lss_skip=0
@@ -286,6 +295,8 @@ pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
 [protocol root:]
 need_proxy=1
 strip_file_prefix=0
+extra_env=IFDH_ROOT_EXTRA
+extra_env2=IFDH_XROOT_EXTRA
 #cp_cmd=xrdcp –DIRedirectLimit 255 -DIRequestTimeout 14400 --tpc first --force %(extra)s %(src)s %(dst)s
 cp_cmd=xrdcp -DIRequestTimeout 14400 --tpc first --force  %(extra)s %(src)s %(dst)s
 lss_cmd=xrdwrap.sh ls -l %(src)s
@@ -303,6 +314,7 @@ rmdir_cmd=xrdwrap.sh rmdir %(src)s
 [protocol gs:]
 need_google_token=1
 strip_file_prefix=1
+extra_env=IFDH_GS_EXTRA
 cp_cmd=gsutil cp  %(extra)s %(src)s %(dst)s
 cp_r_cmd=gsutil cp -r %(extra)s %(src)s %(dst)s
 lss_cmd=gsutil ls %(src)s
@@ -325,6 +337,7 @@ pin_cmd=false
 need_aws_token=1
 strip_file_prefix=1
 redir_pipe=1
+extra_env=IFDH_S3_EXTRA
 cp_cmd=aws s3 cp  %(extra)s %(src)s %(dst)s
 cp_r_cmd=aws s3 cp --recursive %(extra)s %(src)s %(dst)s
 lss_cmd=aws s3 ls %(src)s
@@ -346,6 +359,8 @@ pin_cmd=false
 [protocol https:]
 strip_file_prefix=1
 need_proxy=1
+extra_env=IFDH_HTTPS_EXTRA
+extra_env2=IFDH_CURL_EXTRA
 cp_cmd=www_cp.sh %(extra)s %(src)s %(dst)s
 lss_cmd=www_cp.sh --ls %(src)s
 lss_skip=0
@@ -356,6 +371,7 @@ mv_cmd=www_cp.sh --mv %(src)s %(dst)s
 
 [protocol D0:]
 strip_file_prefix=1
+extra_env=IFDH_D0_EXTRA
 cp_cmd=src="%(src)s"; dst="%(dst)s"; scp %(extra)s ${src\#D0:} ${dst\#D0:}
 lss_size_last=0
 lss_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "find ${srcp} -maxdepth 1 \( -type d -printf '%s %p/\n' -o -printf '%s %p\n' \)"
