make recursion depth mostly work for ifdh ll

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -190,7 +190,7 @@ lss_size_last=0
 lss_dir_last=1
 lss_skip=0
 lss_cmd=find %(src)s -maxdepth 1 \( -type d -printf '%s %p/\n' -o -printf '%s %p\n' \) 
-ll_cmd=find %(src)s -maxdepth 1 -ls
+ll_cmd=find %(src)s -maxdepth %(recursion_depth) -ls
 lss_re1 = \s*([0-9]+)\s(/.*/)(.*)(/)$
 lss_re2 = \s*([0-9]+)\s(/.*/)(.*)()$
 mv_cmd=mv %(src)s %(dst)s
@@ -249,7 +249,7 @@ lss_size_last=0
 lss_dir_last=0
 lss_re1 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s*(_*)([^/]*)$
 lss_re2 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s*[A-Z].{11}\s*(/.*/)([^/]*)$
-ll_cmd=uberftp -ls %(src)s
+ll_cmd=uberftp -ls %(r)s %(src)s
 mv_cmd=dst="%(dst)s";  uberftp -rename %(src)s /${dst\#*://*/}
 chmod_cmd=uberftp -chmod %(mode)s  %(src)s
 mkdir_cmd=uberftp -mkdir  %(src)s
@@ -266,7 +266,7 @@ lss_skip=0
 lss_size_last=0
 lss_dir_last=1
 lss_re1 = \s*([0-9]+)\s(/.*/)([^ /]*)(/?) *$
-ll_cmd=srmls -2 -count=8192 --long %(src)s 
+ll_cmd=srmls -2 -count=8192 --recursion_depth=%(recursion_depth) --long %(src)s 
 mv_cmd=srmmv -2 %(src)s %(dst)s
 chmod_cmd=srm-set-permissions --owner=%(obits)s --group=%(gbits)s --other=%(obits)s %(src)s
 mkdir_cmd=srmmkdir %(src)s
@@ -304,7 +304,7 @@ lss_skip=0
 lss_size_last=0
 lss_dir_last=0
 lss_re1 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/]*)$
-ll_cmd=xrdwrap.sh ls -l %(src)s
+ll_cmd=xrdwrap.sh ls -l %(r)s %(src)s
 mv_cmd=xrdwrap.sh mv %(src)s %(dst)s
 chmod_cmd=xrdwrap.sh chmod %(mode)s %(src)s
 mkdir_cmd=xrdwrap.sh mkdir %(src)s
@@ -325,7 +325,7 @@ lss_dir_last=1
 #   3914624  2012-03-02T19:30:27Z  gs://bucket/obj2
 lss_re1 = \s*([0-9]*)\s+[0-9][-0-9]{9}T[:0-9]{8}Z\s()([^/]*)(/?)$
 lss_re2 = \s*([0-9]*)\s+[0-9][-0-9]{9}T[:0-9]{8}Z\s*(.*/)([^/]*)(/?)$
-ll_cmd=gsutil ls -l %(src)s
+ll_cmd=gsutil ls -l %(r)s %(src)s
 mv_cmd=gsutil mv %(src)s %(dst)s
 chmod_cmd=gsutil chmod %(mode)s %(src)s
 mkdir_cmd=gsutil mkbucket %(src)s
@@ -348,7 +348,7 @@ lss_dir_last=1
 # 2015-08-04 15:02:33        479 d1/d2/d3/file.gz
 lss_re1 = [0-9][-0-9]{9}\s[:0-9]{8}\s*([0-9]*)\s*()([^/]*)(/?)$
 lss_re2 = [0-9][-0-9]{9}\s[:0-9]{8}\s*([0-9]*)\s*(.*/)([^/]*)(/?)$
-ll_cmd=
+ll_cmd=aws s3 ls %(src)s
 mv_cmd=aws s3 mv %(src)s %(dst)s
 chmod_cmd=aws s3 chmod %(mode)s %(src)s
 mkdir_cmd=aws s3 mkbucket %(src)s
@@ -363,6 +363,7 @@ extra_env=IFDH_HTTPS_EXTRA
 extra_env2=IFDH_CURL_EXTRA
 cp_cmd=www_cp.sh %(extra)s %(src)s %(dst)s
 lss_cmd=www_cp.sh --ls %(src)s
+lss_cmd=www_cp.sh --ls -l %(r)s %(src)s
 lss_skip=0
 lss_size_last=1
 lss_dir_last=1
@@ -380,7 +381,7 @@ lss_re2 = \s*([0-9]+)\s(/.*/)(.*)()$
 lss_skip=0
 lss_size_last=0
 lss_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "find ${srcp} -maxdepth 1 \( -type d -printf '%s %p/\n' -o -printf '%s %p\n' \)"
-ll_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "ls -l ${srcp}"
+ll_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "ls -l %(r)s ${srcp}"
 mv_cmd=src="%(src)s"; dst="%(dst)s"; dstp=${dst\#D0:*:} src=${src\#D0:}; srch=${src%:/*} srcp=${src/*:/}; ssh ${srch} "mv ${srcp} ${dstp}"
 chmod_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "chmod %(mode)s ${srcp}"
 mkdir_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "mkdir ${srcp}"
