handle smu case from ifhd v1_8_11

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -3,7 +3,7 @@
 EXPERIMENT=(annie|argoneut|auger|btev|captmnv|cdms|cepa|chips|ckm|coupp|cpad|darkside|des|ds50|e990|dune|gm2|GM2|genie|lar1nd|lariat|lartpc|lbne|lbnewc|minerva|miniboone|mu2e|nova|numix|nusoft|patriot|sbnd|sciboone|seaquest|Simons|uboone)
 
 [general]
-conditionals=gfal macos
+conditionals=gfal macos smu_onsite
 protocols=file: https: ucondb: gsiftp: srm:  i: s3: gs: D0: root:
 prefixes=D0: /pnfs/dzero /pnfs/cdfen /pnfs /%(EXPERIMENT)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ s3:// gs:// gsiftp:// srm:// xroot:// root:// /
 
@@ -15,6 +15,7 @@ rename_proto=srm-gfal: srm:
 [conditional macos]
 test=-x /usr/bin/dyld
 rename_proto=gsiftp-apple: gsiftp:
+
 
 [prefix /%(EXPERIMENT)s/]
 location=bluearc
@@ -126,6 +127,29 @@ prefix_file=/pnfs/cdfen/
 prefix_gsiftp=gsiftp://cdfdca1.fnal.gov/pnfs/fnal.gov/usr/cdfen/
 prefix_srm=srm://cdfdca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/
 prefix_root=root://cdfdca1.fnal.gov:1094/pnfs/fnal.gov/usr/cdfen/
+
+# ----------------------
+# section to make /scratch/users go through gridftp door at smu
+# anywhere else its just another local filesystem
+#
+[conditional smu_onsite]
+test=-H *.smu.edu
+rename_loc=smuscratch-onsite smuscratch
+
+[prefix /scratch/users]
+slashstrip=0
+location=smuscratch
+
+[location smuscratch-onsite]
+protocols=gsiftp:
+need_cpn_lock=0
+prefix_gsiftp=gsiftp://mfosgse.ehpc.smu.edu
+
+[location smuscratch]
+protocols=file:
+need_cpn_lock=0
+prefix_file=
+# ----------------------
 
 [location dcache_dzero]
 need_cpn_lock=0
