handle smu case from ifhd v1_8_11

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -5,7 +5,7 @@ EXPERIMENT=(annie|argoneut|auger|btev|captmnv|cdms|cepa|chips|ckm|coupp|cpad|dar
 [general]
 conditionals=gfal macos smu_onsite
 protocols=file: https: ucondb: gsiftp: srm:  i: s3: gs: D0: root:
-prefixes=D0: /pnfs/dzero /pnfs/cdfen /pnfs /%(EXPERIMENT)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ s3:// gs:// gsiftp:// srm:// xroot:// root:// /
+prefixes=D0: /pnfs/dzero /pnfs/cdfen /pnfs /scratch/users/ /%(EXPERIMENT)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ s3:// gs:// gsiftp:// srm:// xroot:// root:// /
 
 
 [conditional gfal]
