protocol aliases, config file stanza copy, xrootd fixes

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -4,7 +4,7 @@ EXPERIMENT=(annie|argoneut|auger|btev|captmnv|cdms|cepa|chips|ckm|coupp|cpad|dar
 
 [general]
 conditionals=gfal macos smu_onsite
-protocols=file: https: ucondb: gsiftp: srm:  i: s3: gs: D0: root:
+protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot:
 prefixes=D0: /pnfs/dzero /pnfs/cdfen /pnfs /scratch/users/ /%(EXPERIMENT)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ s3:// gs:// gsiftp:// srm:// xroot:// root:// /
 
 
@@ -77,6 +77,10 @@ slashstrip=4
 location= dcache_stken
 slashstrip=6
 
+[prefix xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr]
+location= dcache_stken
+slashstrip=6
+
 [prefix /pnfs]
 location= dcache_stken
 slashstrip=2
@@ -129,6 +133,7 @@ prefix_file=/pnfs/cdfen/
 prefix_gsiftp=gsiftp://cdfdca1.fnal.gov/pnfs/fnal.gov/usr/cdfen/
 prefix_srm=srm://cdfdca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/
 prefix_root=root://cdfdca1.fnal.gov:1094/pnfs/fnal.gov/usr/cdfen/
+prefix_xroot=root://cdfdca1.fnal.gov:1094/pnfs/fnal.gov/usr/cdfen/
 
 # ----------------------
 # section to make /scratch/users go through gridftp door at smu
@@ -161,6 +166,7 @@ prefix_file=/pnfs/dzero
 prefix_gsiftp=gsiftp://d0dca1.fnal.gov/pnfs/fnal.gov/usr/dzero
 prefix_srm=srm://d0dca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/dzero
 prefix_root=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
+prefix_xroot=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
 
 [location dcache_stken]
 need_cpn_lock=0
@@ -171,6 +177,7 @@ prefix_file=/pnfs/
 prefix_gsiftp=gsiftp://fndca1.fnal.gov/pnfs/fnal.gov/usr/
 prefix_srm=srm://fndca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/
 prefix_root=root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/
+prefix_xroot=root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/
 prefix_https=https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/
 
 [location amazon_s3]
@@ -193,6 +200,7 @@ prefix_i=
 need_cpn_lock=0
 protocols=root:
 prefix_root=
+prefix_xroot=
 
 [location generic_se]
 need_cpn_lock=0
@@ -317,6 +325,7 @@ rm_cmd=gfal-rm %(src)s
 rmdir_cmd=gfal-rm %(src)s
 pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
 
+
 [protocol root:]
 need_proxy=1
 strip_file_prefix=0
@@ -335,6 +344,9 @@ chmod_cmd=xrdwrap.sh chmod %(mode)s %(src)s
 mkdir_cmd=xrdwrap.sh mkdir %(src)s
 rm_cmd=xrdwrap.sh rm %(src)s
 rmdir_cmd=xrdwrap.sh rmdir %(src)s
+
+[protocol xroot:]
+alias=root:
 
 [protocol gs:]
 need_google_token=1
@@ -394,6 +406,9 @@ lss_size_last=1
 lss_dir_last=1
 lss_re1 = (/.*/)([^/]*)\s([0-9]+)\s*$
 mv_cmd=www_cp.sh --mv %(src)s %(dst)s
+
+[protocol http:]
+alias=https:
 
 [protocol D0:]
 strip_file_prefix=1
