wrong test for MacOS...

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -13,7 +13,7 @@ test=-x /usr/bin/gfal-copy
 rename_proto=srm-gfal: srm:
 
 [conditional macos]
-test=-x /usr/bin/dyld
+test=-x /usr/bin/update_dyld_shared_cache
 rename_proto=gsiftp-apple: gsiftp:
 
 
