config based VO mapping

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -7,6 +7,18 @@ conditionals=gfal macos smu_onsite
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot:
 prefixes=D0: /pnfs/dzero /pnfs/cdfen /pnfs /scratch/users/ /%(EXPERIMENT)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ s3:// gs:// gsiftp:// srm:// xroot:// root:// /
 
+[experiment_vo]
+numrules=5
+match1=(lbne|cdf|lsst|fermilab|dune|des)
+repl1=$1:/$1
+match2=dzero
+repl2=$1:/$1/users
+match3=mars(.*)
+repl3=fermilab:/fermilab/mars/$1
+match4=samdev
+repl4=fermilab:/fermilab
+match5=(.*)
+repl5=fermilab:/fermilab/$1
 
 [conditional gfal]
 test=-x /usr/bin/gfal-copy
