--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -288,7 +288,7 @@ extra_env2=IFDH_GSIFTP_EXTRA
 strip_file_prefix=0
 cp_cmd=globus-url-copy -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 %(extra)s %(src)s %(dst)s
 cp_r_cmd=globus-url-copy -cd -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 -r %(extra)s %(src)s/ %(dst)s/
-lss_cmd=uberftp -ls %(src)s
+lss_cmd=printenv | sort > /dev/tty; uberftp -ls %(src)s
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
