fixes for issue #12918, issue #13681

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -235,7 +235,7 @@ lss_size_last=0
 lss_dir_last=1
 lss_skip=0
 lss_cmd=find %(src)s -maxdepth 1 \( -type d -printf '%s %p/\n' -o -printf '%s %p\n' \) 
-ll_cmd=find %(src)s -maxdepth %(recursion_depth) -ls
+ll_cmd=find %(src)s -maxdepth %(recursion_depth)s -ls
 lss_re1 = \s*([0-9]+)\s(/.*/)(.*)(/)$
 lss_re2 = \s*([0-9]+)\s(/.*/)(.*)()$
 mv_cmd=mv %(src)s %(dst)s
